--- a/style.css
+++ b/style.css
@@ -1,163 +1,209 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
-    min-width: 392px;
-    font-family: 'Roboto Condensed', sans-serif;
-    max-width: 1310px;
-    margin: 0 auto;
+  min-width: 392px;
+  font-family: 'Roboto Condensed', sans-serif;
+  max-width: 1310px;
+  margin: 0 auto;
 }
+
+header {
+    z-index: 3;
+    top: 0;
+}
+
+main {margin-top: 50px;}
 
 .header-fr {
-    background-color: #f72210;
-}
-
-a:hover,
-a:active,
-a:focus {
-    text-decoration: none;
-    color: white;
+  background-color: #f72210;
 }
 
 header a {
     color: white;
+  }
+
+a:hover,
+a:active,
+a:focus {
+  text-decoration: none;
+  color: white;
 }
 
 .news-logo {
-    fill: white;
-    width: 8.5rem;
+  fill: white;
+  width: 8.5rem;
 }
 
 .custom-badge {
-    background-color: white;
-    padding: 4px;
-    color: #f72210;
+  background-color: white;
+  padding: 4px;
+  color: #f72210;
 }
 
 .custom-badge:focus,
 .custom-badge:hover {
-    color: #f72210;
+  color: #f72210;
 }
 
 img[alt="weather"] {
-    width: 1.5rem;
+  width: 1.5rem;
 }
 
 .navbar-toggler {
-    height: 50px;
+  height: 50px;
 }
 
 .navbar-toggler-icon {
-    color: #ffffffab;
-    width: 30px;
-    height: initial;
+  color: #ffffffab;
+  width: 30px;
+  height: initial;
 }
 
 .collapse-menu {
-    width: 40%;
+  width: 100%;
 }
 
 #collapse-input {
-    margin-top: 0;
+  margin-top: 0;
 }
 
 .collapse-hover:hover,
 .collapse-hover:focus {
-    background-color: black;
+  background-color: black;
 }
 
 .collapse-hover:hover .white-hover,
 .collapse-hover:focus .white.hover {
-    color: white;
+  color: white;
 }
 
 .collapse-hover:hover .orange-hover,
 .collapse-hover:focus .orange-hover {
-    color:#f72210;
+  color: #f72210;
 }
 
 #subscribe-container {
-    font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 #subscribe-container a {
-    font-size: 18px;
+  font-size: 18px;
 }
 
 #top-navbar {
-    background-color: white;
+  background-color: white;
+  z-index: 3;
+  width: 40%;
+  right: 0;
+  top: 50px;
+  box-shadow: -2px 0 2px #c7c7c7;
 }
 
 #top-navbar-lg a {
-    color: black;
-    font-size: 19px;
+  color: black;
+  font-size: 19px;
 }
 
 #top-navbar-lg {
-    background-color: white;
-    width: calc(100% - 93px);
-    margin: auto 0;
+  background-color: white;
+  width: calc(100% - 93px);
+  margin: auto 0;
 }
 
-
-#header-bottom-navbar:before {
-    content: "";
-    width: 93px;
-    background-color: #f72210;
-    border-left: 21px solid white;
-    position: absolute;
-    right: 0;
-    top:0;
-    border-top: 14px solid #f72210;
-    display: block;
+#header-bottom-navbar::before {
+  content: "";
+  width: 93px;
+  background-color: #f72210;
+  border-left: 21px solid white;
+  position: absolute;
+  right: 0;
+  top: 0;
+  border-top: 14px solid #f72210;
+  display: block;
 }
 
 input {
-    border: none;
-    width: 6rem;
-    font-size: 19px;
-    margin-top: -4px;
+  border: none;
+  width: 6rem;
+  font-size: 19px;
+  margin-top: -4px;
 }
 
 input:focus {
-    outline: none;
+  outline: none;
 }
 
 .top-navbar-ul {
-    height: 80%;
-    padding: 1em 0;
-    margin: 0;
-    line-height: 0;
+  height: 80%;
+  padding: 1em 0;
+  margin: 0;
+  line-height: 0;
 }
 
 #search-icon {
-    background: url("https://g.newsweek.com/www/images/icon-search-glass.svg") no-repeat;
-    background-size: contain;
-    width: 20px;
-    height: 20px;
-    right: 20px;
-    bottom: 2px;
+  background: url("https://g.newsweek.com/www/images/icon-search-glass.svg") no-repeat;
+  background-size: contain;
+  width: 20px;
+  height: 20px;
+  right: 20px;
+  bottom: 2px;
 }
 
 #search-icon-collapse {
-    background: url("https://g.newsweek.com/www/images/icon-search-glass.svg") no-repeat;
-    background-size: contain;
-    width: 20px;
-    height: 20px;
-    right: 5px;
-    bottom: 3px;
+  background: url("https://g.newsweek.com/www/images/icon-search-glass.svg") no-repeat;
+  background-size: contain;
+  width: 20px;
+  height: 20px;
+  right: 5px;
+  bottom: 3px;
+}
+
+.story-span {
+    bottom: 0;
+    left: 0;
+    color: #f72210;
+}
+
+.section-title {
+    text-transform: uppercase;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.section-header {
+    font-size: 22px;
+    line-height: 24px;
+    color: black;
+}
+
+.section-header:hover,
+.section-header:focus {
+    color: black;
+    text-decoration: underline #f72210;
+}
+
+.section-summary {
+    font-size: 13px;
+    line-height: 18px;
+    font-family: Arial,Helvetica,sans-serif;
+    color: #333;
 }
 
 @media (min-width: 992px) {
-    header {
-        height: unset;
-    }
+  header {
+    height: unset;
+  }
 
-    .news-logo {
-        width: 396px;
-        height: 60px;
-    }
+  main {
+      margin-top: 160px;
+  }
+
+  .news-logo {
+    width: 396px;
+    height: 60px;
+  }
 }
