--- a/style.css
+++ b/style.css
@@ -252,6 +252,15 @@ input:focus {
   height: 40px;
 }
 
+.more-stories-img {
+  height: 95px;
+  width: 95px;
+}
+
+.more-stories-header {
+  font-size: 17px;
+}
+
 @media (min-width: 992px) {
   header {
     height: unset;
