--- a/style.css
+++ b/style.css
@@ -314,6 +314,10 @@ input:focus {
   font-size: 16px;
 }
 
+.last-magazine-span-md {
+  bottom: 6.8rem;
+}
+
 .slide-span {
   background: url(https://g.newsweek.com/themes/newsweek/images/icon-slideshows-nw.png) 0 0/contain no-repeat;
   color: #f72210;
@@ -381,6 +385,28 @@ a:hover .footer-link {
 #footer-p {
   font-size: 12px;
   color: #666;
+}
+
+.travel-md {
+  width: calc(100% / 3 - 12px);
+}
+
+.overflow-y-scroll {
+  overflow-y: scroll;
+  max-height: 2623px;
+  -ms-overflow-style: none;
+}
+
+.overflow-y-scroll::-webkit-scrollbar {
+  display: none;
+}
+
+.magazine-md {
+  width: calc(100% / 4 - 10px);
+}
+
+.magazine-md-img {
+  height: 214px;
 }
 
 @media (max-width: 768px){
