fixed header and footer responsive errors

--- a/style.css
+++ b/style.css
@@ -429,6 +429,13 @@ a:hover .footer-link {
   width: calc(100% / 2 - 10px);
 }
 
+
+@media (min-width: 576px) {
+  header {
+    min-width: 571px;
+  }
+} 
+
 @media (max-width: 768px){
   .footer-link  {
     border-right: none!important;
@@ -436,8 +443,15 @@ a:hover .footer-link {
 }
 
 @media (min-width: 992px) {
+  body,
+  header {
+    max-width: 1390px;
+  }
+  
   header {
     height: unset;
+    min-width: 1100px!important;
+    max-width: 1390px!important;
   }
 
   main {
