--- a/style.css
+++ b/style.css
@@ -119,8 +119,10 @@ img[alt="weather"] {
 
 #top-navbar-lg {
   background-color: white;
-  width: calc(100% - 93px);
   margin: auto 0;
+  position: absolute;
+  top: 0px;
+  width: 100%;
 }
 
 #header-bottom-navbar::before {
@@ -131,8 +133,9 @@ img[alt="weather"] {
   position: absolute;
   right: 0;
   top: 0;
-  border-top: 14px solid #f72210;
+  border-top: 11px solid #f72210;
   display: block;
+  z-index: 2;
 }
 
 input {
@@ -443,16 +446,7 @@ a:hover .footer-link {
 }
 
 @media (min-width: 992px) {
-  body,
-  header {
-    max-width: 1390px;
-  }
-  
-  header {
-    height: unset;
-    min-width: 1100px!important;
-    max-width: 1390px!important;
-  }
+
 
   main {
       margin-top: 160px;
